Fortran: Fix ubound simplifcation [PR99027]

gcc/fortran/ChangeLog:

	PR fortran/99027
	* simplify.c (simplify_bound_dim): Honor DIMEN_ELEMENT
	when using dim=.

gcc/testsuite/ChangeLog:

	PR fortran/99027
	* gfortran.dg/ubound_1.f90: New test.

(cherry picked from commit f600f271b10d0214b111f2aa52a3d5740477e139)